test/errors/utils/pid.h
#ifndef PID_H
#define PID_H

void setupPID();
void computePID();
void funcoes_math(double x, double *output);

#endif // PID_H